2008-06-19  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* include/exmpp.hrl, src/core/exmpp_presence.erl,
	src/core/exmpp_message.erl, src/Emakefile.in, src/Makefile.am,
	ebin/Makefile.am, ebin/exmpp.app.in, doc/Makefile.am: Add
	exmpp_presence and exmpp_message which provides helpers to handle
	presence and message stanza respectively.

	* src/core/exmpp_xml.erl (reset_parser/1): This function was calling
	reset_parser2/2 directly instead of reset_parser/2. Therefore, options
	were not merged and the parser was not actually reset.

2008-06-18  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Caution: XML parser options and exmpp_xmlstream API changed!

	* src/core/exmpp_xml.erl, testsuite/check_xml_parser.erl: Options
	handling was revised a lot:
	    o  Options are now real "proplists". It means that all options
	       starting with "no_" doesn't exist anymore. They're almost all
	       replaced by a tuple '{Key, false}'.
	    o  Previous options are kept in the #xml_parser record.
	    o  A new function reset_parser/2 allows one to change parser
	       options and reset its parsing state.
	This will be useful to get exmpp_xml:start/1 out of
	exmpp_xmlstream:start/{1,2,3}. Also, options documentation was
	updated.

	* src/core/exmpp_xml.erl, c_src/exmpp_xml_expat.c: Rename the few
	remaining occurences of "endelement" to "endtag".

	* src/core/exmpp_xmlstream.erl, testsuite/check_xmlstream.erl: From
	now on, the XML parser must be created by the caller and passed to
	exmpp_xmlstream:start/{2,3}. This allow the caller to control the
	parser; for instance, he can add known names, namespaces or
	attributes. He is responsible to stop the parser and can use the new
	get_parser/1 to get it back. start/1 was removed and stop/1 is now a
	NOOP (but is kept for potential future changes).

	* src/network/exmpp_session.erl: Sync with last exmpp_xmlstream
	changes.

2008-06-17  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
